<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:layoutDirection="ltr">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@drawable/selector_background_sign_up"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="209dp"
            android:layout_gravity="center"
            android:src="@drawable/main_logo" />


        <EditText
            android:id="@+id/username_edt_login"
            style="@style/sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_up_height_margin_edt"
            android:background="@drawable/selector_background_sign_up_edt"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="30" />

        <EditText
            android:id="@+id/password_edt_login"
            style="@style/sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_up_height_margin_edt"
            android:background="@drawable/selector_background_sign_up_edt"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textAlignment="viewStart" />

        <CheckBox
            android:id="@+id/show_password_cbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Password"
            android:layout_marginStart="@dimen/standard_margin_x2"
            android:buttonTint="@color/start_sign_up_background_gradient"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_margin_x2"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/selector_background_sign_up_btn"
            android:foreground="?attr/selectableItemBackground"
            android:text="ورود"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/dont_have_acc_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin_x2"
            android:gravity="center_horizontal"
            android:text="@string/dont_have_account"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>